ADR-1406 css alignment fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,9 @@
     text-align: right;
     white-space: nowrap;
 }
+
+.text-align-right-wrap {
+  text-align: right;
+  word-wrap: break-word;
+  white-space: normal;
+}
